# pet-server

./: Cargo.toml  run_db.sh
rsc/db_schema/: V1__create_notes.sql
rsc/db_schema/20250505221900_create_notes/: up.sql
src/: app.rs  main.rs
src/core/: note.rs
src/storage/: db.rs  mod.rs  note.rs  schema.rs
src/web/: mod.rs  note.rs
static/: index.html  index.js
tests/: note_integration_test.rs
