[package]
name = "pet-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pet-server"
path = "src/main.rs"

[lib]
name = "app"
path = "src/app.rs"

[dependencies]
# Async
tokio = { version = "^1", features = ["full"] }

# Logging
log = "0.4.17"
log4rs = "1.1.1"

# Web
rocket = { version = "0.5.0-rc.2", features = ["json"] }

# DB
tokio-postgres = { version = "0.7.6", features = ["with-uuid-1"] }
refinery = { version = "0.8.5", features = ["tokio-postgres"] }
sea-query = "0.24.6"
sea-query-attr = "0.1.1"

# Data
uuid = { version = "1.1.1", features = ["v4", "serde"] }
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }


[dev-dependencies]
isahc = "1.7.2"
lazy_static = "1.4.0"
testcontainers = "0.14.0"